Petite faute corrigée.

--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -100,7 +100,7 @@ On utilise aussi le concept d'\emph{extension} :
 $f: A \rightarrow B$ est une extension de $g: A \rightarrow B$ si $\forall x \in A : g(x)\neq \perp \Rightarrow f(x) = g(x)$.
 Autrement dit, $f$ a la même valeur que $g$ partout où $g$ est définie.
 
-La fonction $\mathrm{sqrt}(x) = \sqrt{x}$ en mathématique n'est valable que pour $x\geq0$. En revanche un programme implémentant cette fonction, par exemple $\mathrm{mysqrt}(x) = \sqrt{x}$ à, retourne une valeur si $x\geq0$ ou \textit{Erreur} sinon. $\mathrm{mysqrt}(x)$ est une extension de la fonction $\mathrm{sqrt}(x)$ de base.
+La fonction $\mathrm{sqrt}(x) = \sqrt{x}$ en mathématique n'est valable que pour $x\geq0$. En revanche un programme implémentant cette fonction, par exemple $\mathrm{mysqrt}(x) = \sqrt{x}$, retourne une valeur si $x\geq0$ ou \textit{Erreur} sinon. $\mathrm{mysqrt}(x)$ est une extension de la fonction $\mathrm{sqrt}(x)$ de base.
 
 \subsubsection{Définition d'une fonction}
 \label{par:d_finition_d_une_fonciton}
