--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -99,7 +99,7 @@ BLOOP (Hoare-Allison)\\
 	la plus longue).
 \end{myrem}
 
-On va un introduire un nouveau langage ND-Pascal qui est le langage Java
+On va un introduire un nouveau langage ND-Java qui est le langage Java
 auquel on ajoute le non-déterminisme sous la forme d'une fonction
 prédéfinie $choose(n)$. Celle-ci retourne un entier compris entre $0$ et $n$ et elle
 est non déterministe.
