--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -132,7 +132,7 @@ Soit $A\subseteq \N$
 
     \begin{proof}
       Si A est vide, il est possible de créer un programme Q qui va déterminer si x $\in$ A. Etant donné que A est vide, aucun élément n'appartient à cet ensemble. Il suffit simplement de créer un programme renvoyant toujours $\bot$. \\
-      Concernant la deuxième la condition, $f$ est une fonction d'énumération (elle peut répéter plusieurs fois un élément, mais ce n'est pas gênant).
+      Concernant la deuxième condition, $f$ est une fonction d'énumération (elle peut répéter plusieurs fois un élément, mais ce n'est pas gênant).
       À l'aide d'un programme $P_f$ qui calcule $f$,
       on appelle $P_f(0), P_f(1), P_f(2), \ldots$
       jusqu'à ce que $P_f(k) = x$ où on retourne $1$.
@@ -159,7 +159,7 @@ Soit $A\subseteq \N$
     Si $A$ est récursivement énumérable et co-récursivement énumérable ($\stcomp{A}$ récursivement énumérable)
     alors $A$ est récursif.
     \begin{proof}
-      Il suffit de créer un programme $Q$ qui, pour décider récursivement si $x \in A$, appelle le programme qui décide $A$ et le programme qui décide $\stcomp{A}$ dans deux threads et renvoie 1 si $x \in A$ et 0 si $x in \stcomp{A}$. En effet, si $A$ et $\stcomp{A}$ sont récursivement énumérables, un des deux appels finira tôt ou tard par dire si x appartient à $A$ ou non.
+      Il suffit de créer un programme $Q$ qui, pour décider récursivement si $x \in A$, appelle le programme qui décide $A$ et le programme qui décide $\stcomp{A}$ dans deux threads et renvoie 1 si $x \in A$ et 0 si $x \in \stcomp{A}$. En effet, si $A$ et $\stcomp{A}$ sont récursivement énumérables, un des deux appels finira tôt ou tard par dire si x appartient à $A$ ou non.
     \end{proof}
 \end{myprop}
 
@@ -203,7 +203,7 @@ Soit $A\subseteq \N$
     \STATE print 0
     \ENDIF
   \end{algorithmic}
-  si il y a exactement $a$ occurrences de $5$ and $\pi$.
+  s'il y a exactement $a$ occurrences de $5$ dans $\pi$.
 
   Si on remplace ``au moins'' par ``exactement'', est-ce toujours calculable ?
   Oui, il suffit de remplacer $\leq$ par $=$.
@@ -247,7 +247,7 @@ Dans le cours on utilise un langage de programmation, Java, comme modèle.
 \end{mydef}
 
 \begin{myprop}
-	P est un ensemble infini dénombrable, car c'est chaîne de caractères d'un alphabet fini. P est récursif, car il existe un programme, le compilateur, qui détermine si une chaîne de caractères est un programme Java ou non.
+	P est un ensemble infini dénombrable, car c'est la chaîne de caractères d'un alphabet fini. P est récursif, car il existe un programme, le compilateur, qui détermine si une chaîne de caractères est un programme Java ou non.
 \end{myprop}
 
 \begin{mydef}[Énumération de P]
@@ -495,7 +495,7 @@ On suppose \textit{interpret} calculable dans Q.
 	\item Sélection de la diagonale
 		$diag(n) = interpret(n,n)$
 	\item Modification de cet élément diag pour obtenir
-		$diag'(n) = interpret(n,n)+1$
+		$diag'(n) = interpret(n,n)+1$.
 		$diag'$ est calculable dans Q, car interpret est calculable dans Q (il y a moyen
 		d'écrire un programme qui calcule $diag'$ en utilisant $diag$)
 
@@ -509,12 +509,12 @@ On suppose \textit{interpret} calculable dans Q.
 		On obtient donc $interpret(d,d)+1 = interpret(d,d)$, ce qui est impossible car $interpret(d,d)$ est un entier. 
 	\item Conclusion : $diag'$ n'est pas calculable dans $Q$, donc $diag$
 	n'est pas calculable dans Q, et donc interpret n'est pas calculable dans $Q$.
-dans Q.
+
 \end{enumerate}
 \end{proof}
 
 \begin{myrem}
-	Si les programmes de Q ne calculaient pas que des fonctions totales, alors ça n'aurait pas posé de problèmes, car si $interpret(d,d)=\bot$, $interpret(d,d)+1=\bot$ et il n'y a plusa de contradiction.  Un programme qui ne se termine pas + quelque chose, reste un programme qui ne se termine pas.
+	Si les programmes de Q ne calculaient pas que des fonctions totales, alors ça n'aurait pas posé de problèmes, car si $interpret(d,d)=\bot$, $interpret(d,d)+1=\bot$ et il n'y a plus de contradiction.  Un programme qui ne se termine pas + quelque chose, reste un programme qui ne se termine pas.
 \end{myrem}
 
 \subsection[Implication du théorème de Hoare Allison]{Implication du théorème \ref{Hoare_Allison}, Hoare Allison}
@@ -563,8 +563,8 @@ dans Q.
 	Il existe une fonction partielle calculable g telle qu'aucune fonction totale calculable n'est une extension de g.
   \begin{proof}
     Soit nbStep(n,x)  = nombre d'instructions exécutées par $\varphi_n(x)$.\\
-    Cette fonction vaut $\bot$ si $P_n(x) = \bot$. Il s'agit donc d'une fonction partielle calculable. Si il existe une extention totale calculable decette fonction, alors la fonction halt serait calculable.\\
-    En effet, soit nbStepPrime(n,x) une extension totale calculable de nbStep. Pour calculer halt(nx), il suffit d'exécuter nbStepPrime(n,x) instructions de $P_n(x)$.  Si à cette étape $P_n(x)$ s'arrête, c'est que nbStepPrime(n,x)=nbStep(n,x) et que $P_n(x)$ se termine.  Si $P_n(x)$ ne s'arrête pas à cette étape, c'est que nbStep(n,x)=$\bot$ et donc que $P_n(x)$ se termine. On a donc un algorithme pour calculer halt, ce qui est impossible.  Donc une telle extension totale de nbStep n'existe pas.
+    Cette fonction vaut $\bot$ si $P_n(x) = \bot$. Il s'agit donc d'une fonction partielle calculable. S'il existe une extension totale calculable de cette fonction, alors la fonction halt serait calculable.\\
+    En effet, soit nbStepPrime(n,x) une extension totale calculable de nbStep. Pour calculer halt(n,x), il suffit d'exécuter nbStepPrime(n,x) instructions de $P_n(x)$.  Si à cette étape $P_n(x)$ s'arrête, c'est que nbStepPrime(n,x)=nbStep(n,x) et que $P_n(x)$ se termine.  Si $P_n(x)$ ne s'arrête pas à cette étape, c'est que nbStep(n,x)=$\bot$ et donc que $P_n(x)$ ne se termine pas. On a donc un algorithme pour calculer halt, ce qui est impossible.  Donc une telle extension totale de nbStep n'existe pas.
   \end{proof}
 \end{mytheo}
 
@@ -981,7 +981,7 @@ d'autres problèmes non calculables. Il y a d'autres exemples sur les grammaires
 
 \begin{mydef}[Nombre réel]
 	Un nombre réel est défini comme la limite d'une suite (convergente) de
-	nombres rationnels: $\lim_{n \rightarrow +\infty} |x-s(n)| = 0 $ ou s’est
+	nombres rationnels: $\lim_{n \rightarrow +\infty} |x-s(n)| = 0 $ ou c’est
 	une fonction totale
 \end{mydef}
 
@@ -993,7 +993,7 @@ d'autres problèmes non calculables. Il y a d'autres exemples sur les grammaires
 \begin{myrem}
 	Donc un nombre est calculable s'il existe un programme qui peut
 	l'approximer aussi près que l'on veut. Par exemple $\pi$ et $e$ sont
-	calculable
+	calculables
 \end{myrem}
 
 \begin{myprop}
