--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -199,7 +199,7 @@ Un automate fini est composé de :
 \begin{myprop}
 	Certains ensembles récursifs ne peuvent pas être reconnus par un
 	automate fini. Par exemple $L = \{ a^n b^n \ | \ n\geq 0\}$ (il me semble que
-	c'est par ce que ça nécessiterait un nombre infini d'états)
+	c'est parce que ça nécessiterait un nombre infini d'états)
 \end{myprop}
 
 \begin{myprop}
@@ -262,7 +262,7 @@ Un exemple simple de mécanisme qui peux être modélisé par un automate fini e
 	\label{FTPortillon}
 \end{table}  
 
-Un exemple plus complexe est le célèbre problème du passeur. Celui ci doit traverser une rivière, avec un loup, une salade et une chèvre. Dans sa barque il ne peux prendre qu'un object avec lui. La difficulté supplémentaire est que la chèvre et le loup ne peuvent pas rester ensemble et la chèvre ne peux pas rester seule avec la salade. Chaque état représente les objets se trouvant sur l'autre rive. P étant le passeur, C la chèvre, L le loup et S la salade. Sur les flèches, la lettre correspond à l'objet transporté avec lui lors de la traversée. Au début rien n'a été transporté, à la fin, les trois objets et le passeur se retrouvent sur l'autre rive.
+Un exemple plus complexe est le célèbre problème du passeur. Celui ci doit traverser une rivière, avec un loup, une salade et une chèvre. Dans sa barque il ne peut prendre qu'un object avec lui. La difficulté supplémentaire est que la chèvre et le loup ne peuvent pas rester ensemble et la chèvre ne peux pas rester seule avec la salade. Chaque état représente les objets se trouvant sur l'autre rive. P étant le passeur, C la chèvre, L le loup et S la salade. Sur les flèches, la lettre correspond à l'objet transporté avec lui lors de la traversée. Au début rien n'a été transporté, à la fin, les trois objets et le passeur se retrouvent sur l'autre rive.
 La figure \ref{Salade} illustre le diagramme d'état de cette énigme.
 \begin{figure}
 	\centering
@@ -952,7 +952,7 @@ obtenues suite à l'application de composition ou de récursion primitive.
 \paragraph{} Selon le théorème de Hoare-Allison, que son interpréteur n'est pas calculable car ce n'est pas une fonction totale calculable.
 
 \begin{myprop}
-	Le modèle des fonctions primitives récursives n'est un modèle complet de la calculabilité.
+	Le modèle des fonctions primitives récursives n'est pas un modèle complet de la calculabilité.
 \end{myprop}
 \paragraph{} Les fonctions primitives récursives ne sont pas un modèle de complet de
 	la calculabilité. En effet, il ne peut pas y avoir de récursion
