--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -266,7 +266,7 @@ Un exemple plus complexe est le célèbre problème du passeur. Celui ci doit tr
 La figure \ref{Salade} illustre le diagramme d'état de cette énigme.
 \begin{figure}
 	\centering
-	\includegraphics[width=0.4\textwidth]{Images/567px-ChevreLoupSalade.jpg}
+	\includegraphics[width=0.4\textwidth]{Images/ChevreLoupSalade.jpg}
 	\caption{Diagramme d'état du passeur \\{\footnotesize Par ManiacParisien — Travail personnel, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=47815891}}
 	\label{Salade}
 \end{figure}
