--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -64,6 +64,7 @@ version={4.0},
 
 \RequirePackage{graphicx}
 \RequirePackage{tikz}
+\RequirePackage{tikz-qtree}
 \RequirePackage[left=3cm,right=3cm,top=3cm,bottom=3cm]{geometry}
 %-----------------------------
 %Configuration des packages
