--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -213,7 +213,7 @@ version={4.0},
 \newcommand{\fdif}[2]{\frac{\dif #1}{\dif #2}}
 \newcommand{\ffdif}[2]{\frac{\dif^2 #1}{\dif #2^2}}
 
-\newtheorem{mydef}{Définition}
+\newtheorem{mydef}{Définition}[chapter]
 \newtheorem{mynota}[mydef]{Notation}
 \newtheorem{myprop}[mydef]{Propriétés}
 \newtheorem{myrem}[mydef]{Remarque}
@@ -225,8 +225,8 @@ version={4.0},
 \newtheorem{myineg}[mydef]{Inégalité}
 \newtheorem{mycipher}[mydef]{Cipher}
 \newtheorem{myatk}[mydef]{Attaque}
-\newtheorem{myprob}{Problème}
-\newtheorem{mylaw}{Loi}
-\newtheorem{myhyp}{Hypothèse}
+\newtheorem{myprob}{Problème}[chapter]
+\newtheorem{mylaw}{Loi}[chapter]
+\newtheorem{myhyp}{Hypothèse}[chapter]
 
 \endinput
