--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -51,6 +51,7 @@ version={4.0},
 \RequirePackage{pdfpages}
 % http://en.wikibooks.org/wiki/LaTeX/Floats,_Figures_and_Captions#Subfloats
 \RequirePackage{caption}
+\RequirePackage{capt-of}
 \RequirePackage{subcaption}
 
 %Toujours mettre enumerate AVANT enumitem
