--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -144,7 +144,7 @@ On considère l'approche 2 en calculabilité.
 		Montrons qu'on peut construire un programme déterministe équivalent.
 		Il suffit de créer un programme qui exécute séquentiellement chacune des N branches de l'arbre.
 		Cependant les branches pouvant être infinies, il est nécessaire d'explorer chaque branche avec la même profondeur.
-		On dit qu'on explore l'arbre en largeur (\textit{Breadth First Search}). La complexité temporelle du programme ainsi construit devient alors exponentielle.
+		On dit qu'on explore l'arbre en largeur (\textit{Breadth First Search}). La complexité temporelle du programme ainsi construit devient exponentielle.
 	\end{proof}
 \end{myprop}
 \paragraph{Exemple} : \\
