--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -143,8 +143,7 @@ On considère l'approche 2 en calculabilité.
 		Soit un programme non-déterministe quelconque à N branches (N \textit{threads}).
 		Montrons qu'on peut construire un programme déterministe équivalent.
 		Il suffit de créer un programme qui exécute séquentiellement chacune des N branches de l'arbre.
-		Cependant les branches pouvant être infinies, il est nécessaire d'explorer chaque branche avec la même profondeur.
-		On dit qu'on explore l'arbre en largeur (\textit{Breadth First Search}). La complexité temporelle du programme ainsi construit devient exponentielle.
+		Cependant les branches pouvant être infinies, il est nécessaire d'explorer ces branches de l'\ arbre d'exécution en largeur d'abord (\textit{Breadth First Search}). La complexité temporelle du programme ainsi construit devient exponentielle.  En effet, un arbre de profondeur $k$ a un nombre exponentiel de noeuds.
 	\end{proof}
 \end{myprop}
 \paragraph{Exemple} : \\
