ajout environnement "thèse" (+ correction corollaire)

--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -220,7 +220,7 @@ version={4.0},
 \newtheorem{myprop}[mydef]{Propriétés}
 \newtheorem{myrem}[mydef]{Remarque}
 \newtheorem{myform}[mydef]{Formules}
-\newtheorem{mycorr}[mydef]{Corrolaire}
+\newtheorem{mycorr}[mydef]{Corollaire}
 \newtheorem{mytheo}[mydef]{Théorème}
 \newtheorem{mylem}[mydef]{Lemme}
 \newtheorem{myexem}[mydef]{Exemple}
@@ -230,5 +230,6 @@ version={4.0},
 \newtheorem{myprob}{Problème}[chapter]
 \newtheorem{mylaw}{Loi}[chapter]
 \newtheorem{myhyp}{Hypothèse}[chapter]
+\newtheorem{mythese}[mydef]{Thèse}
 
 \endinput
